; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-sctp.c_sctp_checksum.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-sctp.c_sctp_checksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sctp_checksum(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8, align 1
  %10 = alloca i8, align 1
  %11 = alloca i8, align 1
  %12 = alloca i8, align 1
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %13 = load i8*, i8** %3, align 8
  store i8* %13, i8** %5, align 8
  store i32 -1, i32* %7, align 4
  store i32 0, i32* %6, align 4
  br label %14

14:                                               ; preds = %25, %2
  %15 = load i32, i32* %6, align 4
  %16 = icmp ult i32 %15, 8
  br i1 %16, label %17, label %28

17:                                               ; preds = %14
  %18 = load i32, i32* %7, align 4
  %19 = load i8*, i8** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = zext i32 %20 to i64
  %22 = getelementptr inbounds i8, i8* %19, i64 %21
  %23 = load i8, i8* %22, align 1
  %24 = call i32 @CRC32C(i32 %18, i8 zeroext %23)
  br label %25

25:                                               ; preds = %17
  %26 = load i32, i32* %6, align 4
  %27 = add i32 %26, 1
  store i32 %27, i32* %6, align 4
  br label %14

28:                                               ; preds = %14
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @CRC32C(i32 %29, i8 zeroext 0)
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @CRC32C(i32 %31, i8 zeroext 0)
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @CRC32C(i32 %33, i8 zeroext 0)
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @CRC32C(i32 %35, i8 zeroext 0)
  store i32 12, i32* %6, align 4
  br label %37

37:                                               ; preds = %50, %28
  %38 = load i32, i32* %6, align 4
  %39 = zext i32 %38 to i64
  %40 = load i64, i64* %4, align 8
  %41 = icmp ult i64 %39, %40
  br i1 %41, label %42, label %53

42:                                               ; preds = %37
  %43 = load i32, i32* %7, align 4
  %44 = load i8*, i8** %5, align 8
  %45 = load i32, i32* %6, align 4
  %46 = zext i32 %45 to i64
  %47 = getelementptr inbounds i8, i8* %44, i64 %46
  %48 = load i8, i8* %47, align 1
  %49 = call i32 @CRC32C(i32 %43, i8 zeroext %48)
  br label %50

50:                                               ; preds = %42
  %51 = load i32, i32* %6, align 4
  %52 = add i32 %51, 1
  store i32 %52, i32* %6, align 4
  br label %37

53:                                               ; preds = %37
  %54 = load i32, i32* %7, align 4
  %55 = xor i32 %54, -1
  store i32 %55, i32* %8, align 4
  %56 = load i32, i32* %8, align 4
  %57 = and i32 %56, 255
  %58 = trunc i32 %57 to i8
  store i8 %58, i8* %9, align 1
  %59 = load i32, i32* %8, align 4
  %60 = lshr i32 %59, 8
  %61 = and i32 %60, 255
  %62 = trunc i32 %61 to i8
  store i8 %62, i8* %10, align 1
  %63 = load i32, i32* %8, align 4
  %64 = lshr i32 %63, 16
  %65 = and i32 %64, 255
  %66 = trunc i32 %65 to i8
  store i8 %66, i8* %11, align 1
  %67 = load i32, i32* %8, align 4
  %68 = lshr i32 %67, 24
  %69 = and i32 %68, 255
  %70 = trunc i32 %69 to i8
  store i8 %70, i8* %12, align 1
  %71 = load i8, i8* %9, align 1
  %72 = zext i8 %71 to i32
  %73 = shl i32 %72, 24
  %74 = load i8, i8* %10, align 1
  %75 = zext i8 %74 to i32
  %76 = shl i32 %75, 16
  %77 = or i32 %73, %76
  %78 = load i8, i8* %11, align 1
  %79 = zext i8 %78 to i32
  %80 = shl i32 %79, 8
  %81 = or i32 %77, %80
  %82 = load i8, i8* %12, align 1
  %83 = zext i8 %82 to i32
  %84 = or i32 %81, %83
  store i32 %84, i32* %7, align 4
  %85 = load i32, i32* %7, align 4
  ret i32 %85
}

declare dso_local i32 @CRC32C(i32, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
